fixed overflow 🐛

--- a/src/components/organisms/header/header.css
+++ b/src/components/organisms/header/header.css
@@ -5,6 +5,7 @@
     justify-content: center;
     align-items: center;
     padding: 0 2rem;
+    overflow: hidden;
 }
 
 
